package ru.dankoy.hw15.core.domain;

public interface Queen {

}
